Initial commit new app

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,10 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+    android:padding="24dp"
+    android:background="#F4CDA7">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Title -->
+    <TextView
+        android:id="@+id/tvLoginTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="130dp"
+        android:text="Welcome Back"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        android:textColor="#3A2C20" />
+
+    <!-- Email -->
+    <EditText
+        android:id="@+id/etEmail"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_below="@id/tvLoginTitle"
+        android:layout_marginTop="50dp"
+        android:hint="Email"
+        android:textColor="#000000"
+        android:textColorHint="#8C7563"
+        android:padding="14dp"
+        android:inputType="textEmailAddress"
+        android:background="@drawable/bg_outline" />
+
+    <!-- Password -->
+    <EditText
+        android:id="@+id/etPassword"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_below="@id/etEmail"
+        android:layout_marginTop="25dp"
+        android:hint="Password"
+        android:textColor="#000000"
+        android:textColorHint="#8C7563"
+        android:padding="14dp"
+        android:inputType="textPassword"
+        android:background="@drawable/bg_outline" />
+
+    <!-- Login Button -->
+    <Button
+        android:id="@+id/btnLogin"
+        android:layout_width="250dp"
+        android:layout_height="52dp"
+        android:layout_below="@id/etPassword"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:text="Login"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        android:background="@drawable/bg_login_btn" />
+
+    <!-- Continue with Google -->
+    <LinearLayout
+        android:id="@+id/btnGoogle"
+        android:layout_width="280dp"
+        android:layout_height="52dp"
+        android:layout_below="@id/btnLogin"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="40dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:padding="3dp"
+        android:background="@drawable/bg_outline_black">
+
+        <!-- Google Icon -->
+        <ImageView
+            android:id="@+id/googleIcon"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:src="@drawable/ic_google"
+            android:layout_marginStart="6dp"
+            android:layout_marginEnd="14dp" />
+
+        <!-- Text -->
+        <TextView
+            android:id="@+id/googleText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Continue with Google"
+            android:textSize="15sp"
+            android:textColor="#000000"
+            android:textStyle="normal"/>
+    </LinearLayout>
+
+    <!-- Sign Up Text -->
+    <TextView
+        android:id="@+id/tvSignUp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="24dp"
+        android:text="Don't have an account? Sign Up"
+        android:textColor="#3A2C20"
+        android:textSize="16sp"
+        android:textStyle="bold"/>
+
+</RelativeLayout>
